--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "gulp": "^3.9.1",
     "gulp-connect": "^5.2.0",
     "gulp-sass": "^3.1.0",
+    "npm": "^5.8.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1"
