--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nms377.github.io/",
+  "homepage": "https://nicolesandry.com",
   "name": "client",
   "version": "0.1.0",
   "private": true,
