--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,14 @@
     "gulp": "^3.9.1",
     "gulp-connect": "^5.5.0",
     "gulp-sass": "^3.2.1",
-    "npm": "^5.8.0",
+    "npm": "^5.10.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0",
-    "react-scripts": "1.1.1"
+    "gh-pages": "^1.2.0",
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
